# obscura

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  build.py  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
assets/: Obscura.icns
docs/: fused-token-splitting.md  release-macos.md
docs/code-review/: 2026-02-05-code-review.md
docs/plans/: 2026-02-04-obscura-design.md  2026-02-04-obscura-implementation-review.md  2026-02-04-obscura-implementation.md
scripts/: Obscura.entitlements  bundle_tesseract.sh  package_macos.sh
src/obscura/: __init__.py  __main__.py  api.py  app.py  cli.py  config.py  keywords.py  naming.py  project.py  redact.py  runner.py  runtime.py  sanitize.py  verify.py
src/obscura/ui/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_cli.py  test_cli_module.py  test_config.py  test_config_paths.py  test_keywords.py  test_main_app.py  test_naming.py  test_project.py  test_redact.py  test_runner.py  test_runtime.py  test_sanitize.py  test_ui.py  test_verify.py
thoughts/handoffs/: auto-handoff-20260204-201717.md  auto-handoff-20260204-203011.md  auto-handoff-20260204-211643.md  auto-handoff-20260205-122659.md
