[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "obscura"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.24.0",
    "regex>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
ui = [
    "pywebview>=5.0",
]
cli = []

[project.scripts]
obscura = "obscura.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
