[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "obscura"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.24.0",
    "regex>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]
ui = [
    "pywebview>=5.0",
]
cli = []

[project.scripts]
obscura = "obscura.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=obscura --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=75"
markers = [
    "ui: Playwright UI tests (requires browser)",
]

[tool.coverage.run]
source = ["obscura"]
omit = ["*/ui/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1

[tool.setuptools.packages.find]
where = ["src"]
