[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "obscura"
version = "0.1.0"
description = "Local-only, keyword-based PDF redaction. Your documents never leave your machine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Trey Goff" },
]
keywords = ["pdf", "redaction", "privacy", "ocr", "legal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "PyMuPDF>=1.24.0",
    "regex>=2024.0.0",
]

[project.urls]
Homepage = "https://github.com/treygoff/obscura"
Repository = "https://github.com/treygoff/obscura"
Issues = "https://github.com/treygoff/obscura/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]
ui = [
    "pywebview>=5.0",
]
build = [
    "pyinstaller>=6.0",
]
cli = []

[project.scripts]
obscura = "obscura.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=obscura --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=75"
markers = [
    "ui: Playwright UI tests (requires browser)",
]

[tool.coverage.run]
source = ["obscura"]
omit = ["*/ui/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1

[tool.setuptools.packages.find]
where = ["src"]
